# FLiESANN

./: ECOv002-cal-val-FLiESANN-inputs-single-day.csv  ECOv002-cal-val-FLiESANN-inputs.csv  Processing FLiES with a raster and default parameters.ipynb  README.md  automated_retrieval.py  check_input_distribution.py  debug_dataframe_structure.py  debug_filtering.py  debug_geos5fp_shape.py  debug_shapes.py  generate_FLiES_input_dataset_single_day.py  generate_input_dataset.py  generate_input_dataset_single_day.py  loading_ANN.py  makefile  processing_FLiES_with_rasters.py  pyproject.toml  test_broadcasting_fix.py  test_broadcasting_shapes.py  test_filter_function.py  test_quick_broadcast.py  test_retrieve_static_inputs.py  test_with_cached_data.py
FLiES/: __init__.py
FLiESANN/: ECOv002-cal-val-FLiESANN-inputs.csv  ECOv002-cal-val-FLiESANN-outputs.csv  ECOv002-cal-val-FliESANN-inputs-complete.csv  ECOv002-static-tower-FLiESANN-inputs.csv  ECOv002_calval_FLiESANN_inputs.py  FLiESANN.py  __init__.py  constants.py  generate_FLiESANN_GEOS5FP_inputs.py  generate_FLiESANN_inputs_table.py  generate_input_dataset.py  process_FLiESANN.py  process_FLiESANN_table.py  process_FLiES_ANN.py  process_FLiES_table.py  retrieve_FLiESANN_GEOS5FP_inputs.py  retrieve_FLiESANN_inputs.py  run_FLiESANN_inference.py  run_FLiES_ANN_inference.py  verify.py
notebooks/: Automated Retrieval.ipynb  ECOSTRESS example with automated inputs.ipynb  ECOSTRESS example with manual inputs.ipynb  FLiESANN Sensitivity with ECOv002 Cal-Val.ipynb  Merge Input Tables.ipynb  Process Table.ipynb  Tower Input Data for FLiESANN from ECOSTRESS Collection 2 Cal-Val.ipynb  Tower Static Input Data for BESS-JPL from ECOSTRESS Collection 2 Cal-Val.ipynb
